# ai_intent_flow

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: abstract_ai.py  main.py
app/agent/: abstract_agent.py  agent_bangong.py
app/api/: chat_api.py  frame_api.py  health.py  manage_api.py  router.py
app/context/: chat_context.py
app/core/: config.py  context.py  logger.py
app/db_connection_pool/: async_mysql_connection.py  conversation_db_helper.py  file_load_2_db.py  zb_ai_workflow_util.py  zb_conversation_business_state_util.py  zb_conversation_messages_util.py  zb_conversation_nodes_util.py  zb_conversation_util.py  zb_log_tokens.py  zb_node_model_util.py  zb_node_prompt_util.py
app/db_scripts/: schema_unified.sql
app/intent/: abstract_intent.py  intent_classifier.py
docs/: RAG_DESIGN.md  TOOL_BOOK_MEETING_ROOM_GUIDE.md  abstract_tool_lang_graph_analysis.md  节点提示词版本管理设计文档.md
tests/: MCP_CLIENT_README.md  check_before_modify.py  check_db_records.py  debug_api.py  export_table_data.py  insert_prompt_seeds.py  langchain_hand_offs_muti_agents.py  langchain_hand_offs_single_agent.py  langchain_mcp_client_test.py  langgraph_sequential_toolnode.py  langgraph_stream_test.py  langgraph_sub_graph_per_invocation.py  langgraph_sub_graph_per_thread.py  langgraph_toolnode_example.py  langgraph_workflow_llm_tool_call_test.py  langgraph_workflow_with_agent.py  mcp_client_example.py  mcp_client_quickstart.py  mock_meeting_room_data.json  test_cancel_mechanism.py  test_sub_graph_as_node.py  test_sub_graph_nested.py  test_sub_graph_nested_diff_checkpoint.py  test_sub_graph_nested_diff_thread.py  test_workflow_run_sse.py
(+34 files in other folders)
