[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-intent-flow"
version = "0.1.0"
description = "AI Intent Flow Framework - A flexible AI agent workflow framework based on LangGraph"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "AI Intent Flow Contributors"}
]
keywords = ["ai", "agent", "langgraph", "workflow", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "fastapi>=0.129.0",
  "uvicorn[standard]>=0.24.0",
  "python-multipart>=0.0.22",
  "sqlalchemy>=2.0.23",
  "aiomysql>=0.2.0",
  "langchain-core>=1.2.28",
  "langgraph>=1.1.6",
  "langchain>=1.2.13",
  "pydantic>=2.12.4",
  "langchain-openai>=1.1.12",
  "langchain-community>=0.4.1",
  "ormsgpack>=1.12.0",
  "requests>=2.32.5",
  "pydantic-settings>=2.12.0",
  "langgraph-checkpoint-mysql[aiomysql]>=3.0.0",
  "httpx>=0.25.2",
  "pyyaml>=6.0.1",
  "python-dotenv>=1.0.0",
  "PyMySQL>=1.1.3",
  "loguru>=0.7.2",
  "aiofiles>=23.2.1",
  "pypdf>=6.0.0",
  "python-docx>=1.2.0",
  "pdfplumber>=0.11.9",
  "openpyxl>=3.1.5",
  "pandas>=2.3.3",
  "aiohttp>=3.13.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.3",
  "pytest-asyncio>=0.21.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]